Fix image alignment for info cards
-created flex column layout for each card container
-added a fixed height for the images
-each card item will stretch to be equal height

--- a/style.css
+++ b/style.css
@@ -91,15 +91,15 @@ header {
     margin: 0 auto;
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    align-items: stretch;
     gap: 50px;
     padding: 50px 20px 70px;
-    /* border: 2px solid red; */
+    border: 2px solid red;
 }
 
 .item-img {
-    max-width: 100%;
-    height: auto;
+    width: 100%;
+    height: 300px;
     border-radius: 8px;
     object-fit: cover;
     display: block;
@@ -123,6 +123,16 @@ header {
     padding: 10px;
     color: #4B5563;
 }
+
+.item {
+    border: 2px solid red;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+
 
 
 
